memos/memos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -n memos
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: memos
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: memos
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -n memos
        kompose.version: 1.30.0 (HEAD)
      labels:
        io.kompose.network/memos-default: 'true'
        io.kompose.service: memos
    spec:
      containers:
        - image: neosmemo/memos:0.31.0
          name: memos
          ports:
            - containerPort: &port 5230
              hostPort: *port
              protocol: TCP
          volumeMounts:
            - mountPath: /var/opt/memos
              name: memos-claim0

          livenessProbe: &probes
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: *port

          readinessProbe: *probes

      restartPolicy: Always
      volumes:
        - name: memos-claim0
          persistentVolumeClaim:
            claimName: memos-claim0
