memos/memos-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos-ingress
  namespace: memos
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    cert-manager.io/cluster-issuer: 'letsencrypt'

    gethomepage.dev/enabled: 'true'
    gethomepage.dev/description: Private lightweight note-taking service
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: memos.png
    gethomepage.dev/name: Memos
    gethomepage.dev/siteMonitor: 'https://memos.k3s.pro'
spec:
  rules:
    - host: memos.k3s.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos-service
                port:
                  number: 5230
  tls:
    - hosts:
        - memos.k3s.pro
      secretName: memos-ingress-cert
